@@ -1,5 +1,8 @@
 ViTables ChangeLog
 ==================
+** October 30, 2010 **
+The utils.py module has been simplified.
+
 ** October 26, 2010 **
 Information about version number and copyright has been updated.
 
